# moldyn

./: .gitignore  CMakeLists.txt  LICENSE  README.md  input_processing.cpp  input_processing.hpp  matrix.hpp  utils.cpp  utils.hpp  vec.cpp  vec.hpp
.github/workflows/: cmake_release.yml
tests/: CMakeLists.txt  input_processing_test.txt  test_input_processing.cpp  test_matrix.cpp  test_vec.cpp
